force-app/main/default/objects/AGENT_OU_PIPELINE_V2__c/fields/ACTION_LINK__c.field-meta.xml
<CustomField>
    <fullName>ACTION_LINK__c</fullName>
    <description>Direct link to the recommended enablement resource or training course. This field provides a clickable URL that takes the AE directly to the suggested learning material or action item.</description>
    <label>Action Link</label>
    <type>Url</type>
</CustomField> 