force-app/main/default/objects/AGENT_OU_PIPELINE_V2__c/fields/ACTIONABLE__c.field-meta.xml
<CustomField>
    <fullName>ACTIONABLE__c</fullName>
    <description>If growth factor has action that AE can take to meet their quota. Example values: A pipe assessment and more targeted client communication could help you reduce your early-stage deals and increase your pipe quality. Sellers like you realized an increase in {} after taking the recommended course.</description>
    <label>Actionable</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField> 