force-app/main/default/objects/AGENT_OU_PIPELINE_V2__c/fields/ACV_THRESHOLD__c.field-meta.xml
<CustomField>
    <fullName>ACV_THRESHOLD__c</fullName>
    <description>ACV threshold based on their peer characteristics (region and segment). Example values: 75000.0, 100000.0.</description>
    <label>ACV Threshold</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>