force-app/main/default/objects/AGENT_OU_PIPELINE_V2__c/fields/CALL_AI_MENTION__c.field-meta.xml
<CustomField>
    <fullName>CALL_AI_MENTION__c</fullName>
    <description>Number of AI mentions in AE calls. This field tracks how frequently the AE discusses AI-related topics during customer interactions, indicating AI product knowledge and engagement.</description>
    <label>Call AI Mention</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField> 