force-app/main/default/objects/AGENT_OU_PIPELINE_V2__c/fields/COVERAGE__c.field-meta.xml
<CustomField>
    <fullName>COVERAGE__c</fullName>
    <description>Pipeline coverage ratio for the AE. This field represents the ratio of pipeline value to quota, indicating how well the AE's pipeline covers their quota target.</description>
    <label>Coverage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField> 