force-app/main/default/objects/AGENT_OU_PIPELINE_V2__c/fields/CQ_ACV__c.field-meta.xml
<CustomField>
    <fullName>CQ_ACV__c</fullName>
    <description>Current Quarter Annual Contract Value (ACV) for the AE. This represents the total ACV generated from closed deals in the current quarter.</description>
    <label>Current Quarter ACV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField> 