force-app/main/default/objects/AGENT_OU_PIPELINE_V2__c/fields/CQ_CALL_CONNECT__c.field-meta.xml
<CustomField>
    <fullName>CQ_CALL_CONNECT__c</fullName>
    <description>Number of calls during this quarter for an AE. Example values: 0.0, 6.0, 31.0.</description>
    <label>Current Quarter Call Connect</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField> 