force-app/main/default/objects/AGENT_OU_PIPELINE_V2__c/fields/CQ_CC_ACV__c.field-meta.xml
<CustomField>
    <fullName>CQ_CC_ACV__c</fullName>
    <description>Current quarter Create and Close (C&amp;C). C&amp;C refers to ACV generated from same-period opportunities over the past three months measures the effectiveness of sales efforts. Improving this can help AEs reach their quota by focusing on opportunities that are more likely to close within the same period, increasing their chances of closing deals and generating revenue. Example values: 1861.32, 0.0, 148.17999999999995.</description>
    <label>Current Quarter Cc Acv</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField> 