force-app/main/default/objects/AGENT_OU_PIPELINE_V2__c/fields/CQ_CUSTOMER_MEETING__c.field-meta.xml
<CustomField>
    <fullName>CQ_CUSTOMER_MEETING__c</fullName>
    <description>Current quarter number customer meetings for each AE. Example values: 10.0, 6.0, 8.0.</description>
    <label>Current Quarter Customer Meeting</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField> 