force-app/main/default/objects/AGENT_OU_PIPELINE_V2__c/fields/CQ_PG__c.field-meta.xml
<CustomField>
    <fullName>CQ_PG__c</fullName>
    <description>Current Quarter Pipeline Generation (PG) amount for the AE. This represents the total pipeline value generated in the current quarter.</description>
    <label>Current Quarter PG</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField> 