force-app/main/default/objects/AGENT_OU_PIPELINE_V2__c/fields/CS_ACCT_ID_1__c.field-meta.xml
<CustomField>
    <fullName>CS_ACCT_ID_1__c</fullName>
    <description>Cross-sell opportunity 1 Account ID. Example values: 0010M00001Qlf7n, 0013000000M1a2r, 0013000000hLc7m.</description>
    <label>Cross-Sell Acct Id 1</label>
    <length>18</length>
    <type>Text</type>
</CustomField> 