force-app/main/default/objects/AGENT_OU_PIPELINE_V2__c/fields/CS_ACCT_NM_1__c.field-meta.xml
<CustomField>
    <fullName>CS_ACCT_NM_1__c</fullName>
    <description>Cross-sell opportunity 1 Account Name. Example values: isolved Inc. - People Services, Troy Construction, Llp, Idealease Inc. - Lease Program Org.</description>
    <label>Cross-Sell Acct Nm 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField> 