force-app/main/default/objects/AGENT_OU_PIPELINE_V2__c/fields/CS_NEXT_BEST_PRODUCT_1__c.field-meta.xml
<CustomField>
    <fullName>CS_NEXT_BEST_PRODUCT_1__c</fullName>
    <description>Cross-Sell Next Best Product 1 for the AE. This field identifies the first recommended product for cross-selling to existing customers, expanding their Salesforce footprint.</description>
    <label>CS Next Best Product 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField> 