force-app/main/default/objects/AGENT_OU_PIPELINE_V2__c/fields/DAYS_TO_PRODUCTIVITY__c.field-meta.xml
<CustomField>
    <fullName>DAYS_TO_PRODUCTIVITY__c</fullName>
    <description>The number of days it takes an AE to meet or exceed the average ACV attainment of their peers. Example values: 184.0, 225.0, 107.0.</description>
    <label>Days To Productivity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>