force-app/main/default/objects/AGENT_OU_PIPELINE_V2__c/fields/DEFINITION__c.field-meta.xml
<CustomField>
    <fullName>DEFINITION__c</fullName>
    <description>Definition of the growth factor or performance metric for the AE. This field provides context about what specific metric or factor is being measured (e.g., Early-Stage Pipeline Percentage, Deal Size, Pipeline Stage Stagnation).</description>
    <label>Definition</label>
    <length>255</length>
    <type>Text</type>
</CustomField> 