force-app/main/default/objects/AGENT_OU_PIPELINE_V2__c/fields/DESCRIPTION__c.field-meta.xml
<CustomField>
    <fullName>DESCRIPTION__c</fullName>
    <description>Detailed description of the growth factor or performance metric. This field explains the business impact and importance of improving the specific metric for the AE's success.</description>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField> 