force-app/main/default/objects/AGENT_OU_PIPELINE_V2__c/fields/EMP_EMAIL_ADDR__c.field-meta.xml
<CustomField>
    <fullName>EMP_EMAIL_ADDR__c</fullName>
    <description>The employee's corporate email address. Use for contacting the user and as a secondary join key when necessary. Example values: cwentz@salesforce.com, abarnhart@salesforce.com, sean.mcmillan@salesforce.com.</description>
    <label>Employee Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField> 