force-app/main/default/objects/AGENT_OU_PIPELINE_V2__c/fields/EMP_ID__c.field-meta.xml
<CustomField>
    <fullName>EMP_ID__c</fullName>
    <description>Unique employee identifier for the AE (Account Executive). This field serves as the primary key to link AE data across different systems and reports.</description>
    <label>Employee ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField> 