force-app/main/default/objects/AGENT_OU_PIPELINE_V2__c/fields/EMP_MGR_NM__c.field-meta.xml
<CustomField>
    <fullName>EMP_MGR_NM__c</fullName>
    <description>Employee Manager Name for the AE. This field identifies the direct manager or supervisor responsible for the AE's performance and development.</description>
    <label>Employee Manager Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField> 