force-app/main/default/objects/AGENT_OU_PIPELINE_V2__c/fields/FULL_NAME__c.field-meta.xml
<CustomField>
    <fullName>FULL_NAME__c</fullName>
    <description>Full name of the Account Executive (AE). Used for identification and reporting purposes in territory analysis and performance tracking.</description>
    <label>Full Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField> 