force-app/main/default/objects/AGENT_OU_PIPELINE_V2__c/fields/FULLTOTALACVQUOTAUSD__c.field-meta.xml
<CustomField>
    <fullName>FULLTOTALACVQUOTAUSD__c</fullName>
    <description>Total Quota attained so far. Example values: 1362036.4054, 1297177.53, 1091162.2856.</description>
    <label>Full Total ACV Quota USD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>