force-app/main/default/objects/AGENT_OU_PIPELINE_V2__c/fields/LEARNER_PROFILE_ID__c.field-meta.xml
<CustomField>
    <fullName>LEARNER_PROFILE_ID__c</fullName>
    <description>Learner Profile ID linking the AE to their learning and enablement profile. This field creates a connection between the AE's sales performance data and their learning journey.</description>
    <label>Learner Profile ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField> 