force-app/main/default/objects/AGENT_OU_PIPELINE_V2__c/fields/OPEN_PIPE_AE_SCORE_1__c.field-meta.xml
<CustomField>
    <fullName>OPEN_PIPE_AE_SCORE_1__c</fullName>
    <description>Open Pipeline AE Health Score for Stage 1 opportunity. This field contains the AE health score (0-5) for the first pipeline stage opportunity, where 0 indicates low confidence and 5 indicates high confidence.</description>
    <label>Open Pipe AE Score 1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField> 