force-app/main/default/objects/AGENT_OU_PIPELINE_V2__c/fields/OPEN_PIPE_APM_L2_2__c.field-meta.xml
<CustomField>
    <fullName>OPEN_PIPE_APM_L2_2__c</fullName>
    <description>Open Pipeline APM Level 2 (Product Family) for Stage 2 opportunity. This field identifies the product family category for the second pipeline stage opportunity.</description>
    <label>Open Pipe APM L2 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField> 