force-app/main/default/objects/AGENT_OU_PIPELINE_V2__c/fields/OPEN_PIPE_OPTY_DAYS_IN_STAGE_3__c.field-meta.xml
<CustomField>
    <fullName>OPEN_PIPE_OPTY_DAYS_IN_STAGE_3__c</fullName>
    <description>Open Pipeline Opportunity Days in Stage 3. This field represents the number of days the third pipeline stage opportunity has remained in its current stage, serving as a pipeline aging indicator.</description>
    <label>Open Pipe Opty Days In Stage 3</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField> 