force-app/main/default/objects/AGENT_OU_PIPELINE_V2__c/fields/OPEN_PIPE_OPTY_NM_1__c.field-meta.xml
<CustomField>
    <fullName>OPEN_PIPE_OPTY_NM_1__c</fullName>
    <description>Open Pipeline Opportunity Name for Stage 1. This field contains the name of the first pipeline stage opportunity for the AE.</description>
    <label>Open Pipe Opty Nm 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField> 