force-app/main/default/objects/AGENT_OU_PIPELINE_V2__c/fields/OPEN_PIPE_OPTY_NM_2__c.field-meta.xml
<CustomField>
    <fullName>OPEN_PIPE_OPTY_NM_2__c</fullName>
    <description>Open Pipeline Opportunity Name for Stage 2. This field contains the name of the second pipeline stage opportunity for the AE.</description>
    <label>Open Pipe Opty Nm 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField> 