force-app/main/default/objects/AGENT_OU_PIPELINE_V2__c/fields/OPEN_PIPE_OPTY_STG_NM_1__c.field-meta.xml
<CustomField>
    <fullName>OPEN_PIPE_OPTY_STG_NM_1__c</fullName>
    <description>Open Pipeline Opportunity Stage Name for Stage 1. This field identifies the sales stage for the first pipeline opportunity, focusing on identifying the opportunity, business challenge, high-level timeline, compelling event, sponsor, and competition analysis.</description>
    <label>Open Pipe Opty Stg Nm 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField> 