force-app/main/default/objects/AGENT_OU_PIPELINE_V2__c/fields/OPEN_PIPE_OPTY_STG_NM_2__c.field-meta.xml
<CustomField>
    <fullName>OPEN_PIPE_OPTY_STG_NM_2__c</fullName>
    <description>Open Pipeline Opportunity Stage Name for Stage 2. This field identifies the sales stage for the second pipeline opportunity, focusing on determining problem and impact, refined timeline &amp; budget, decision criteria &amp; process, and internal deal team formation.</description>
    <label>Open Pipe Opty Stg Nm 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField> 