force-app/main/default/objects/AGENT_OU_PIPELINE_V2__c/fields/OPEN_PIPE_OPTY_STG_NM_3__c.field-meta.xml
<CustomField>
    <fullName>OPEN_PIPE_OPTY_STG_NM_3__c</fullName>
    <description>Open Pipeline Opportunity Stage Name for Stage 3. This field identifies the sales stage for the third pipeline opportunity, focusing on validating benefits and value, developing pricing proposal, scoping implementation, business benefits (ROI), and political influence mapping.</description>
    <label>Open Pipe Opty Stg Nm 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField> 