force-app/main/default/objects/AGENT_OU_PIPELINE_V2__c/fields/OPEN_PIPE_ORIGINAL_OPENPIPE_ALLOC_AMT_2__c.field-meta.xml
<CustomField>
    <fullName>OPEN_PIPE_ORIGINAL_OPENPIPE_ALLOC_AMT_2__c</fullName>
    <description>Open Pipeline Original OpenPipe Allocation Amount for Stage 2 opportunity. This field represents the allocated pipeline value for the second stage opportunity.</description>
    <label>Open Pipe Original OpenPipe Alloc Amt 2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField> 