force-app/main/default/objects/AGENT_OU_PIPELINE_V2__c/fields/OPEN_PIPE_PROD_NM_1__c.field-meta.xml
<CustomField>
    <fullName>OPEN_PIPE_PROD_NM_1__c</fullName>
    <description>Open Pipeline Product Name for Stage 1 opportunity. This field contains the specific product name tied to the first pipeline stage opportunity.</description>
    <label>Open Pipe Prod Nm 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField> 