force-app/main/default/objects/AGENT_OU_PIPELINE_V2__c/fields/OPEN_PIPE_PROD_NM_2__c.field-meta.xml
<CustomField>
    <fullName>OPEN_PIPE_PROD_NM_2__c</fullName>
    <description>Open Pipeline Product Name for Stage 2 opportunity. This field contains the specific product name tied to the second pipeline stage opportunity.</description>
    <label>Open Pipe Prod Nm 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField> 