force-app/main/default/objects/AGENT_OU_PIPELINE_V2__c/fields/OPEN_PIPE_PROD_NM_3__c.field-meta.xml
<CustomField>
    <fullName>OPEN_PIPE_PROD_NM_3__c</fullName>
    <description>Open Pipeline Product Name for Stage 3 opportunity. This field contains the specific product name tied to the third pipeline stage opportunity.</description>
    <label>Open Pipe Prod Nm 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField> 