force-app/main/default/objects/AGENT_OU_PIPELINE_V2__c/fields/OPEN_PIPE_REVISED_SUB_SECTOR_1__c.field-meta.xml
<CustomField>
    <fullName>OPEN_PIPE_REVISED_SUB_SECTOR_1__c</fullName>
    <description>Open Pipeline Revised Sub-Sector for Stage 1 opportunity. This field contains the revised sub-sector (vertical) classification for the first pipeline stage opportunity, used for specialized plays and content.</description>
    <label>Open Pipe Revised Sub Sector 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField> 