force-app/main/default/objects/AGENT_OU_PIPELINE_V2__c/fields/OU_NAME__c.field-meta.xml
<CustomField>
    <fullName>OU_NAME__c</fullName>
    <description>Operating Unit name for the AE (e.g., AMER ACC, AMER ICE, LATAM, EMEA). This field is used for geographic and organizational filtering in territory analysis and reporting.</description>
    <label>Operating Unit Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField> 