force-app/main/default/objects/AGENT_OU_PIPELINE_V2__c/fields/PQ_ACV__c.field-meta.xml
<CustomField>
    <fullName>PQ_ACV__c</fullName>
    <description>Previous quarter ACV generated amount by AE. Example values: 391831.07000000007, 670328.24, 67205.39.</description>
    <label>Previous Quarter Acv</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>