force-app/main/default/objects/AGENT_OU_PIPELINE_V2__c/fields/PQ_CALL_CONNECT__c.field-meta.xml
<CustomField>
    <fullName>PQ_CALL_CONNECT__c</fullName>
    <description>Previous quarter Call Connect by AE. Example values: 8.0, 0.0, 22.0.</description>
    <label>Previous Quarter Call Connect</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>