force-app/main/default/objects/AGENT_OU_PIPELINE_V2__c/fields/PQ_CC_ACV__c.field-meta.xml
<CustomField>
    <fullName>PQ_CC_ACV__c</fullName>
    <description>Previous quarter Create and Close (C&C) by AE. C&C means ACV generated from same-period opportunities over the past three months measures the effectiveness of sales efforts. Example values: 258226.09, 248706.03, 67205.39.</description>
    <label>Previous Quarter Cc Acv</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>