force-app/main/default/objects/AGENT_OU_PIPELINE_V2__c/fields/PQ_CUSTOMER_MEETING__c.field-meta.xml
<CustomField>
    <fullName>PQ_CUSTOMER_MEETING__c</fullName>
    <description>Number of customer meetings for an AE in the previous quarter. Example values: 124.0, 121.0, 119.0.</description>
    <label>Previous Quarter Customer Meeting</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>