force-app/main/default/objects/AGENT_OU_PIPELINE_V2__c/fields/PQ_PG__c.field-meta.xml
<CustomField>
    <fullName>PQ_PG__c</fullName>
    <description>Previous quarter pipe generated amount by an AE. Example values: 2324625.7300000004, 918487.41, 2848517.9399999995.</description>
    <label>Previous Quarter Pg</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>