force-app/main/default/objects/AGENT_OU_PIPELINE_V2__c/fields/PRIMARY_INDUSTRY__c.field-meta.xml
<CustomField>
    <fullName>PRIMARY_INDUSTRY__c</fullName>
    <description>Primary industry focus for the AE's territory. This field identifies the main industry vertical that the AE specializes in (e.g., Technology, Healthcare, Financial Services).</description>
    <label>Primary Industry</label>
    <length>255</length>
    <type>Text</type>
</CustomField> 