force-app/main/default/objects/AGENT_OU_PIPELINE_V2__c/fields/RAMP_STATUS__c.field-meta.xml
<CustomField>
    <fullName>RAMP_STATUS__c</fullName>
    <description>Ramp status of the AE (e.g., Fast Ramper, Slow Ramper, On Track). This field indicates how quickly the AE is progressing toward full productivity after onboarding.</description>
    <label>Ramp Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField> 