force-app/main/default/objects/AGENT_OU_PIPELINE_V2__c/fields/RECOMMENDED_ACTION__c.field-meta.xml
<CustomField>
    <fullName>RECOMMENDED_ACTION__c</fullName>
    <description>Recommended enablement action or training course for the AE. This field suggests specific learning resources or actions to help improve the identified growth factor or performance metric.</description>
    <label>Recommended Action</label>
    <length>255</length>
    <type>Text</type>
</CustomField> 