force-app/main/default/objects/AGENT_OU_PIPELINE_V2__c/fields/RENEWAL_ACCT_ID__c.field-meta.xml
<CustomField>
    <fullName>RENEWAL_ACCT_ID__c</fullName>
    <description>Renewal opportunity Account ID. Example values: 00130000016hQwM, 0010M00001QqTzb, 00130000002xWii.</description>
    <label>Renewal Acct Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField> 