force-app/main/default/objects/AGENT_OU_PIPELINE_V2__c/fields/RENEWAL_ACCT_NM__c.field-meta.xml
<CustomField>
    <fullName>RENEWAL_ACCT_NM__c</fullName>
    <description>Renewal opportunity Account Name. Example values: The Pool Management Group Inc, MONI Smart Security (Org 2), Annett Holdings, Inc. d/b/a TMC Transportation.</description>
    <label>Renewal Acct Nm</label>
    <length>255</length>
    <type>Text</type>
</CustomField> 