force-app/main/default/objects/AGENT_OU_PIPELINE_V2__c/fields/RENEWAL_OPTY_AMT__c.field-meta.xml
<CustomField>
    <fullName>RENEWAL_OPTY_AMT__c</fullName>
    <description>Renewal Opportunity Amount for the AE. This field represents the monetary value of renewal opportunities, indicating the potential revenue from contract renewals.</description>
    <label>Renewal Opty Amt</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField> 