force-app/main/default/objects/AGENT_OU_PIPELINE_V2__c/fields/RENEWAL_OPTY_NM__c.field-meta.xml
<CustomField>
    <fullName>RENEWAL_OPTY_NM__c</fullName>
    <description>Renewal opportunity name. Example values: The Pool Management Group Inc Renewal 28 Call Center, MONI Smart Security (Org 2) Renewal 287 Pardot, 1 Platform, Annett Holdings, Inc. d/b/a TMC Transportation Renewal 10 Salesforce Maps.</description>
    <label>Renewal Opty Nm</label>
    <length>255</length>
    <type>Text</type>
</CustomField> 