force-app/main/default/objects/AGENT_OU_PIPELINE_V2__c/fields/TIME_SINCE_ONBOARDING__c.field-meta.xml
<CustomField>
    <fullName>TIME_SINCE_ONBOARDING__c</fullName>
    <description>Time since an AE onboarded with their new role in months (tenure). Example values: 27.86, 34.86, 25.86.</description>
    <label>Time Since Onboarding</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>