force-app/main/default/objects/AGENT_OU_PIPELINE_V2__c/fields/UPSELL_ACCT_ID_1__c.field-meta.xml
<CustomField>
    <fullName>UPSELL_ACCT_ID_1__c</fullName>
    <description>Upsell opportunity no 1. Example values: 0013y00001focD2, 0010M00001QqTzb, 0013000001Msa5V.</description>
    <label>Upsell Acct Id 1</label>
    <length>18</length>
    <type>Text</type>
</CustomField> 