force-app/main/default/objects/AGENT_OU_PIPELINE_V2__c/fields/UPSELL_ACCT_NM_1__c.field-meta.xml
<CustomField>
    <fullName>UPSELL_ACCT_NM_1__c</fullName>
    <description>Upsell Account Name 1 for the AE. This field identifies the first account where the AE has identified upsell opportunities to expand existing customer relationships.</description>
    <label>Upsell Acct Nm 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField> 