force-app/main/default/objects/AGENT_OU_PIPELINE_V2__c/fields/UPSELL_SUB_CATEGORY_1__c.field-meta.xml
<CustomField>
    <fullName>UPSELL_SUB_CATEGORY_1__c</fullName>
    <description>Product tied to Upsell no 1. Example values: AppExchange, Account Engagement, Slack.</description>
    <label>Upsell Sub Category 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField> 