force-app/main/default/objects/AGENT_OU_PIPELINE_V2__c/fields/VAL_QUOTA__c.field-meta.xml
<CustomField>
    <fullName>VAL_QUOTA__c</fullName>
    <description>Current quarter quota value for the AE. This field represents the sales target that the AE is expected to achieve in the current quarter.</description>
    <label>Current Quarter Quota</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField> 