force-app/main/default/objects/AGENT_OU_PIPELINE_V2__c/fields/WORK_LOCATION_COUNTRY__c.field-meta.xml
<CustomField>
    <fullName>WORK_LOCATION_COUNTRY__c</fullName>
    <description>Country of the employee's primary work location, used for geo/region rollups and eligibility rules. Example values: US, Brazil, Canada.</description>
    <label>Work Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField> 